--- a/static/css/main.css
+++ b/static/css/main.css
@@ -175,74 +175,135 @@ html {
 
 /* Top header */
 
-.site-header {
-    position: relative;
-    z-index: 1000;
-    display: flex;
-    background: #100e17;
-    border-bottom: 1px solid #201c29;
-    animation: none;
-    box-sizing: border-box;
+.header {
+    background-color: #100e17;
+    box-shadow: 1px 1px 4px 0 rgb(32, 28, 41);
+    text-align: center;
+    width: 100%;
+    z-index: 1;
 }
 
-.site-header .logo {
-    transition: 0s;
-    flex: 0;
-    position: relative;
-    align-self: stretch;
-    display: flex;
-    align-items: center;
-}
-
-.site-header .logo,
-.site-header .logo > a {
-    display: flex;
-    align-items: center;
-    padding: 1rem 2rem
-}
-
-.site-header .header-nav {
-    flex: 1;
-}
-
-.site-header .main-nav {
-    height: 100%;
-}
-
-.site-header .main-nav .main-sections {
-    display: flex;
-    height: 100%;
-}
-
-.site-header .main-nav .main-sections > li {
-    flex: 1;
-}
-
-.site-header .main-nav .main-sections > li:first-child a {
-    border-left: 1px solid #201c29;
-}
-
-.site-header .main-nav > ul > li > a {
-    padding: 1rem .5rem;
-    margin-left: 2rem;
-    display: flex;
-}
-
-nav ul li {
-    margin-left: 2rem;
-    display: inline-block;
-    float: left;
-}
-
-nav > ul {
-    margin: 0 auto;
+.header ul {
+    margin: 0;
     padding: 0;
-    height: 118px;
-    display: flex;
-    align-items: center;
-    position: static;
-
+    list-style: none;
+    overflow: hidden;
+    background-color: #100e17;
 }
+
+.header li a {
+    font-family: 'Domine', sans-serif;
+    font-weight: 700;
+    display: block;
+    padding: 20px 20px;
+    border-right: 1px solid rgb(32, 28, 41);
+    text-decoration: none;
+    color: white;
+}
+
+.header li a:hover,
+.header .menu-btn:hover {
+    background-color: #312d3c;
+}
+
+.header .logo {
+    display: flex;
+}
+
+/* Menu */
+
+.header .menu {
+    clear: both;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+}
+
+/* Mobile Menu Icon */
+
+.header .menu-icon {
+    cursor: pointer;
+    display: inline-block;
+    float: right;
+    padding: 28px 20px;
+    position: relative;
+    user-select: none;
+}
+
+.header .menu-icon .navicon {
+    background: white;
+    display: block;
+    height: 2px;
+    position: relative;
+    transition: background .2s ease-out;
+    width: 18px;
+}
+
+.header .menu-icon .navicon:before,
+.header .menu-icon .navicon:after {
+    background: white;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+.header .menu-icon .navicon:before {
+    top: 5px;
+}
+
+.header .menu-icon .navicon:after {
+    top: -5px;
+}
+
+/* Mobile Menu Button */
+
+.header .menu-btn {
+    display: none;
+}
+
+.header .menu-btn:checked ~ .menu {
+    max-height: 240px;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon {
+    background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
+    transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
+    transform: rotate(45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+    top: 0;
+}
+
+@media (min-width: 768px) {
+    .header li {
+        float: left;
+    }
+
+    .header li a {
+        padding: 20px 30px;
+    }
+
+    .header .menu {
+        clear: none;
+        float: right;
+        max-height: none;
+    }
+
+    .header .menu-icon {
+        display: none;
+    }
+}
+
 
 /* Article Meta Info */
 
@@ -346,10 +407,7 @@ h2 a:hover {
 }
 
 .hero-article h2 a:hover {
-    background: linear-gradient(90deg, #ff8a00, #e52e71);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-box-decoration-break: clone;
+    background: linear-gradient(90deg, #ff8a00, #e52e71), text;
 }
 
 .hero-article {
@@ -369,7 +427,6 @@ h2 a:hover {
     background: linear-gradient(90deg, #ff8a00, #e52e71);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    -webkit-box-decoration-break: clone;
     font-weight: 700;
     border-bottom: 1px solid #e52e71;
 }
@@ -377,8 +434,6 @@ h2 a:hover {
 .read-more:hover {
     background: white;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-box-decoration-break: clone;
 }
 
 /* Styling for the popular articles row as a whole */
@@ -411,12 +466,8 @@ h2 a:hover {
 
 @media(max-width:1200px) {
     .popular-header-card {
-        -webkit-writing-mode: vertical-rl;
-        -ms-writing-mode: tb-rl;
         writing-mode: vertical-rl;
-        -webkit-transform: rotate(180deg);
         transform: rotate(180deg);
-        -webkit-box-flex: 0;
         flex: 0;
         width: 110px;
         margin-right: 1rem
@@ -493,10 +544,7 @@ h2 a:hover {
 }
 
 .cards h2 a:hover {
-    background: linear-gradient(90deg, #ff8a00, #e52e71);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-box-decoration-break: clone;
+    background: linear-gradient(90deg, #ff8a00, #e52e71), text;
 }
 
 .cards figure {
@@ -550,10 +598,7 @@ aside {
 }
 
 .big-article h2:hover {
-    background: linear-gradient(90deg, #ff8a00, #e52e71);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-box-decoration-break: clone;
+    background: linear-gradient(90deg, #ff8a00, #e52e71), text;
 }
 
 .big-article p {
@@ -564,20 +609,29 @@ aside {
     border: 1px solid #201c29;
 }
 
-.keep-browsing {
+.keep-browsing-button {
     background-image: linear-gradient(0deg, #ff8a00, #e52e71);
-    position: relative;
-    border-radius: 16px;
-    padding: 0.5rem;
+    border-radius: 8px;
+    padding: 1rem 1.5rem;
     margin-top: 2rem;
-    display: flex;
-    flex-direction: column;
+    display: block;
 }
 
-.keep-browsing h2 {
+
+.keep-browsing-button:hover {
+    transform: translateY(1px);
+    border-radius: 8px;
+    background-image: linear-gradient(to left top, rgb(255, 138, 0) 30%, rgb(229, 46, 113));
+}
+
+.keep-browsing-button h2 {
+    font-family: inherit;
     font-size: 25px;
     font-weight: 700;
     text-align: center;
+    background: white;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 /* Footer - Newsletter Form */
@@ -640,6 +694,7 @@ hr.thick-line {
 
 #subscribe-button {
     font-family: inherit;
+    color: white;
     font-size: 100%;
     font-weight: 700;
     line-height: 1.4;
@@ -650,6 +705,12 @@ hr.thick-line {
     transition: all 0.07s ease 0s;
     border-radius: 8px !important;
     box-sizing: border-box;
+}
+
+#subscribe-button:hover {
+    transform: translateY(1px);
+    background-image: linear-gradient(to left top, rgb(255, 138, 0) 30%, rgb(229, 46, 113)) !important;
+    background-clip: border-box !important;
 }
 
 /* Footer Text & Nav */
@@ -670,6 +731,12 @@ hr.thick-line {
 .footer-text {
     max-width: 700px;
     margin-right: auto;
+}
+
+@media (max-width: 800px) {
+    .footer-text {
+        margin-bottom: 2rem;
+    }
 }
 
 .footer-text p {
@@ -698,18 +765,22 @@ hr.thick-line {
 }
 
 .footer-text-nav-container > nav > a:hover {
-    background-image: linear-gradient(90deg, rgb(255, 138, 0), rgb(229, 46, 113))text;
+    background-image: linear-gradient(90deg, rgb(255, 138, 0), rgb(229, 46, 113));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 
 /* Main Article specific styling */
+
+/* Header with gradient */
 
 ..mega-header {
     background: #100e17;
     color: #fff;
     position: relative;
     overflow: hidden;
-    padding: 4rem 2rem 2rem
+    padding: 4rem 2rem 2rem;
 }
 
 @media(max-width:800px) {
@@ -718,12 +789,15 @@ hr.thick-line {
     }
 }
 
-.mega-header-inside {
-    display: grid;
-    grid-template-columns: minmax(200px, 1fr) 300px;
-    grid-gap: 4rem;
-    max-width: var(--maxWidth);
-    margin: 0 auto
+.mega-header-inside h1 {
+    color: white;
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.header-content p {
+    color: white;
+    margin: 2rem;
 }
 
 @media(max-width:800px) {
@@ -735,17 +809,14 @@ hr.thick-line {
 .mega-header-header {
     position: relative;
     z-index: 1;
-    display: -webkit-box;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column
+    flex-direction: column;
 }
 
 .mega-header-author {
     background: 0 0;
     overflow: visible;
-    margin: 0 0 2rem
+    margin: 0 0 2rem;
 }
 
 .mega-header-author .avatar {
@@ -791,28 +862,8 @@ hr.thick-line {
     }
 }
 
-.author-subhead {
-    font-family: Operator Mono A, Operator Mono B, Source Code Pro, Menlo, Consolas, Monaco, monospace;
-    font-size: .66rem;
-    margin: 0 0 .25rem
-}
-
-.author-bio {
-    color: #da1b60;
-    font-style: italic;
-    font-size: 1.3rem;
-    margin: 0 0 1rem;
-    width: 69%
-}
-
-@media(max-width:800px) {
-    .author-bio {
-        font-size: 1.1rem
-    }
-}
-
 .header-breadcrumbs {
-    font-family: Ringside Regular A, Ringside Regular B, Rubik, Lato, Lucida Grande, Lucida Sans Unicode, Tahoma, Sans-Serif;
+    font-family: 'Rubik', sans-serif;
     font-style: normal;
     font-weight: 700;
     background: #100e17;
@@ -820,172 +871,39 @@ hr.thick-line {
 }
 
 .header-breadcrumbs span {
-    font-size: 18px
+    font-size: 18px;
 }
 
 .header-breadcrumbs span.breadcrumb-separator {
     color: #312d3c;
-    font-weight: 700
+    font-weight: 700;
 }
 
 .header-breadcrumbs span a {
     color: #7a7a8c;
     display: inline-block;
-    padding: .25rem
+    padding: .25rem;
 }
 
-.header-breadcrumbs .breadcrumb_last {
-    display: block
+.header-breadcrumbs {
+    display: block;
 }
 
-@media(max-width:800px) {
-    .header-breadcrumbs .breadcrumb_last {
-        font-size: 1.8rem
-    }
-}
-
-@media(max-width:1200px) {
-    .header-breadcrumbs {
-        padding: 4rem 2rem 1rem
-    }
-}
-
-@media(max-width:800px) {
-    .header-breadcrumbs {
-        padding: 2rem 1rem 1rem
-    }
-}
-
-@media(max-width:800px) {
-    .header-breadcrumbs-inside span {
-        font-size: 14px
-    }
-}
-
-body.page-template-guide-special-php .header-gradient-content-inside,
-body.post-template-guide-special-php .header-gradient-content-inside,
-body.single-guides .header-gradient-content-inside {
-    -webkit-box-pack: end;
-    justify-content: flex-end
+.header-gradient-content-inside {
+    justify-content: flex-end;
 }
 
 @media(min-width:1200px) {
-
-    body.page-template-guide-special-php .header-gradient-content-inside .sharedaddy,
-    body.post-template-guide-special-php .header-gradient-content-inside .sharedaddy,
-    body.single-guides .header-gradient-content-inside .sharedaddy {
-        padding: 2rem 0
+    .header-gradient-content-inside {
+        padding: 1rem 0;
     }
 }
 
-.header-guides {
-    background: #100e17;
-    color: #fff;
-    position: relative;
-    padding: 2rem 2rem 5.2rem
-}
-
-.header-guides .blob-circle {
-    position: absolute;
-    width: 500px;
-    height: 500px;
-    top: -200px;
-    -webkit-transform: rotate(-120deg);
-    transform: rotate(-120deg);
-    right: 100px;
-    left: auto;
-    z-index: 1;
-    display: block
-}
-
-@media(max-width:1200px) {
-    .header-guides .blob-circle {
-        display: none
-    }
-}
-
-.header-guides .article-content-meta {
-    grid-template-areas: "date"
-}
-
-.header-guides .article-comments-meta,
-.header-guides .author-avatar,
-.header-guides .author-name-area {
-    display: none
-}
-
-.header-guides .created {
-    grid-column: 1/2;
-    white-space: nowrap
-}
-
-.header-guides .updated {
-    grid-column: 2/3;
-    white-space: nowrap
-}
-
-@media(max-width:1200px) {
-    .header-guides {
-        padding: 1rem
-    }
-}
-
-.header-guides-inside {
-    position: relative;
-    z-index: 2;
-    display: grid;
-    grid-template-columns: 1fr 300px;
-    grid-gap: 4rem
-}
-
-@media(max-width:1200px) {
-    .header-guides-inside {
-        display: block
-    }
-}
-
-.guide-sponsor {
-    background: #201c29;
-    color: #a1a1af;
-    padding: 2rem;
-    box-shadow: 0 0 5rem #100e17;
-    position: relative;
-    z-index: 3;
-    border-radius: 1rem;
-    max-width: 600px;
-    position: absolute;
-    bottom: calc(-4rem - 132px);
-    left: 0;
-    display: grid;
-    grid-template-columns: 1fr 110px;
-    grid-gap: 1rem;
-    -webkit-box-align: center;
-    align-items: center
-}
-
-.guide-sponsor h5 {
-    color: #fff
-}
-
-.guide-sponsor p {
-    margin: 0
-}
-
-.guide-sponsor .monthly-sponsor-text {
-    color: #a1a1af;
-    font-size: .7rem
-}
-
-@media(max-width:1200px) {
-    .guide-sponsor {
-        display: none
-    }
-}
 
 .header-with-bottom-gradient {
     border-bottom-right-radius: 200px;
     position: relative;
-    z-index: 1
+    z-index: 1;
 }
 
 @media(max-width:800px) {
@@ -1019,35 +937,12 @@ body.single-guides .header-gradient-content-inside {
     display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
-    -webkit-box-pack: justify;
     justify-content: space-between;
-    -webkit-box-align: center;
     align-items: center
 }
 
-.header-gradient-content-inside .sharedaddy {
-    -webkit-box-ordinal-group: 3;
-    order: 2;
-    padding: 0;
+.header-gradient-content-inside {
     margin-bottom: 1rem
-}
-
-.header-gradient-content-inside p a:hover {
-    -webkit-text-fill-color: #201c29 !important
-}
-
-.header-gradient-sponsor {
-    white-space: nowrap
-}
-
-.header-gradient-sponsor p {
-    margin-bottom: 1rem
-}
-
-@media(max-width:800px) {
-    .header-gradient-sponsor {
-        font-size: .9rem
-    }
 }
 
 .article-content-meta {
@@ -1057,93 +952,8 @@ body.single-guides .header-gradient-content-inside {
     grid-template-columns: 80px min-content min-content;
     grid-template-areas: "avatar author date comments";
     grid-gap: .25rem 1rem;
-    -webkit-box-align: center;
     align-items: center;
     margin: 0 0 1.5rem
-}
-
-@media(max-width:1200px) {
-    .article-content-meta {
-        grid-template-areas: "avatar author date""avatar comments comments"
-    }
-}
-
-@media(max-width:800px) {
-    .article-content-meta {
-        grid-template-columns: 55px -webkit-min-content -webkit-min-content;
-        grid-template-columns: 55px min-content min-content
-    }
-}
-
-.article-content-meta.article-content-meta-sponsored {
-    grid-template-columns: -webkit-min-content -webkit-min-content;
-    grid-template-columns: min-content min-content;
-    grid-template-areas: "date date"
-}
-
-.hero-article .article-content-meta,
-.module-article .article-content-meta {
-    grid-template-areas: "avatar author comments"
-}
-
-@media(max-width:1200px) {
-
-    .hero-article .article-content-meta,
-    .module-article .article-content-meta {
-        grid-template-areas: "avatar author comments"
-    }
-}
-
-.article-publication-meta {
-    margin: 0 0 .5rem
-}
-
-.article-publication-meta > strong {
-    margin: 0 .3rem 0 0
-}
-
-
-
-.author-avatar {
-    grid-area: avatar;
-    align-self: start;
-    position: relative
-}
-
-.author-avatar img {
-    border-radius: 50%;
-    width: 60px;
-    height: 60px !important;
-    display: block;
-    overflow: hidden;
-    margin: 16px 10px;
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%)
-}
-
-.author-avatar .half-circle {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 80px;
-    height: 56px;
-    fill: none;
-    stroke: url(#orange-to-pink);
-    stroke-width: 8;
-    stroke-linecap: round;
-    pointer-events: none
-}
-
-@media(max-width:800px) {
-    .author-avatar img {
-        width: 35px;
-        height: 35px !important
-    }
-
-    .author-avatar .half-circle {
-        width: 55px;
-        height: 40px
-    }
 }
 
 .main-article-content {
@@ -1153,17 +963,6 @@ body.single-guides .header-gradient-content-inside {
 
 .main-article-content.dark {
     color: #201c29;
-}
-
-.mega-header-inside h1 {
-    color: white;
-    font-size: 2rem;
-    font-weight: 700;
-}
-
-.header-content p {
-    color: white;
-    margin: 2rem;
 }
 
 /* Dark Mode Styling */
@@ -1185,6 +984,13 @@ body.single-guides .header-gradient-content-inside {
     box-sizing: border-box;
 }
 
+.dark-mode:hover,
+.light-mode:hover {
+    transform: translateY(1px);
+    background-image: linear-gradient(to left top, rgb(255, 138, 0) 30%, rgb(229, 46, 113)) !important;
+    background-clip: border-box !important;
+}
+
 .active-mode-message h2 {
     font-size: 2rem;
     color: black;
@@ -1198,10 +1004,12 @@ body.single-guides .header-gradient-content-inside {
 
 main.dark {
     background-color: #201c29;
+    transition: color 0.3s ease;
 }
 
 h3.dark {
     color: white;
+    transition: color 0.3s ease;
 }
 
 p.dark {
